# rime-lua-script

./: LICENSE  README.md
lua/: clipboard_translator.lua  cloud_pinyin_mspy.lua  single_char_mode.lua
rust/lua_module/: Cargo.toml  README.md
rust/lua_module/src/: clipboard.rs  error.rs  lib.rs  logger.rs  rime.rs  suggest.rs
