[package]
name = "lua_module"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "lua_helper_wzv5"

[dependencies]
mlua = { version = "0.11.5", features = ["lua54", "module"] }
clipboard-rs = "0.3.1"
tokio = { version = "1.49.0", features = ["rt"] }
reqwest = { version = "0.13.1", features = ["gzip", "brotli", "zstd", "deflate", "query", "json"] }
serde = {version = "1.0.228", features = ["derive"] }
